[package]
name = "justbus-rs"
version = "0.4.0"
authors = ["Budi Syahiddin <me@inve.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
serde = { version = "1.0" }
serde_json = "1.0"
hashbrown-time = { path = "./hashbrown", optional = true }
parking_lot = { version = "0.11.0", optional = true}
justbus-utils = { path = "./justbus-utils" }
lta = "0.5.1"
dashmap-time = { path = "./dashmap", optional = true}
env_logger = { version = "0.7.1", optional = true }
log = { version = "0.4.11", optional = true }
rustls = { version = "0.19", optional = true }
argh = "0.1.3"
thiserror = "1.0.29"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1.26"

[features]
default = ["swisstable"]
swisstable = ["hashbrown-time", "parking_lot"]
nightly = ["parking_lot/nightly"]
dashmap = ["dashmap-time"]
tls = ["actix-web/rustls", "rustls"]
logging = ["env_logger", "log"]
threadlocal = []

[workspace]
members = [
    "hashbrown",
    "dashmap",
    "justbus-utils",
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = true