[package]
authors = ["Budi Syahiddin <me@inve.rs>"]
edition = "2021"
name = "justbus-rs"
version = "0.4.0-beta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
argh = "0.1.3"
dashmap-time = {path = "./dashmap", optional = true}
env_logger = {version = "0.7.1", optional = true}
hashbrown-time = {path = "./hashbrown", optional = true}
justbus-utils = {path = "./justbus-utils"}
log = {version = "0.4.11", optional = true}
lta = {version = "0.6.0-beta"}
parking_lot = {version = "0.11.0", optional = true}
rustls = {version = "0.18", optional = true}
serde = {version = "1.0"}
serde_json = "1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.4.0"

[features]
dashmap = ["dashmap-time"]
default = []
logging = ["env_logger", "log"]
nightly = ["parking_lot/nightly"]
swisstable = ["hashbrown-time", "parking_lot"]
tls = ["actix-web/rustls", "rustls"]

[workspace]
members = [
  "hashbrown",
  "dashmap",
  "justbus-utils",
]

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
