[package]
name = "dashmap-time"
version = "0.1.0"
authors = ["BudiNverse <me@inve.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.3.4", features = ["raw-api"] }
justbus-utils  = { path = "../justbus-utils" }