[package]
name = "hashbrown-prealloc-time"
version = "0.1.0"
authors = ["BudiNverse <me@inve.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
lta = { version = "0.4.0", features = ["async"] }
tokio = { version = "0.2.22", features = ["full"]}
serde_json = "1.0"